--- a/homologues/Snakefile
+++ b/homologues/Snakefile
@@ -50,3 +50,30 @@ rule get_genomes:
 ftp://ftp.wormbase.org/pub/wormbase/releases/WS285/species/c_elegans/PRJNA13758/c_elegans.PRJNA13758.WS285.genomic.fa.gz
 ftp://ftp.wormbase.org/pub/wormbase/releases/WS285/species/c_brenneri/PRJNA20035/c_brenneri.PRJNA20035.WS285.genomic.fa.gz
 ftp://ftp.wormbase.org/pub/wormbase/releases/WS285/species/c_briggsae/PRJNA10731/c_briggsae.PRJNA10731.WS285.genomic.fa.gz
+ftp://ftp.wormbase.org/pub/wormbase/releases/WS285/species/c_japonica/PRJNA12591/c_japonica.PRJNA12591.WS285.genomic.fa.gz
+ftp://ftp.wormbase.org/pub/wormbase/releases/WS285/species/c_remanei/PRJNA577507/c_remanei.PRJNA577507.WS285.genomic.fa.gz
+ftp://ftp.wormbase.org/pub/wormbase/releases/WS285/species/b_malayi/PRJNA10729/b_malayi.PRJNA10729.WS285.genomic.fa.gz
+ftp://ftp.wormbase.org/pub/wormbase/releases/WS285/species/o_volvulus/PRJEB513/o_volvulus.PRJEB513.WS285.genomic.fa.gz
+ftp://ftp.wormbase.org/pub/wormbase/releases/WS285/species/p_pacificus/PRJNA12644/p_pacificus.PRJNA12644.WS285.genomic.fa.gz
+ftp://ftp.wormbase.org/pub/wormbase/releases/WS285/species/s_ratti/PRJEB125/s_ratti.PRJEB125.WS285.genomic.fa.gz
+ftp://ftp.wormbase.org/pub/wormbase/releases/WS285/species/t_muris/PRJEB126/t_muris.PRJEB126.WS285.genomic.fa.gz
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
