--- a/mrnaseq_example/Snakefile
+++ b/mrnaseq_example/Snakefile
@@ -1,6 +1,7 @@
 # -62 is N2, wildtype
 # -82 is r910, smg-1 mutant
 
+# gets basic statistics about read data
 rule run_hts_stats:
 	input:
 		"data/subset/SRR5811862.subset.fastq.gz"
@@ -10,4 +11,5 @@ rule run_hts_stats:
 		"hts_Stats -U data/subset/SRR5811862.subset.fastq.gz -L HTS_testing/"
 		"SRR5811862.subset.stats.json -f HTS_testing/SRR5811862.subset.stats"
 		
+# count rrna using htstream
 
